--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 
 
               <!-- Dev.to -->
-              <a class="button button-dev-to" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/dev-to.svg" alt="Dev.to Logo">Dev.to</a>
+              <a class="button button-dev-to" href="https://dev.to/qhove" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/dev-to.svg" alt="Dev.to Logo">Dev.to</a>
 
               <!-- GitHub -->
               <a class="button button-github" href="https://github.com/qhove" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
