--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
       </div>
 
       
-      <footer>
-        <a href="https://9362006.xyz">© Zanix Qhove </a>  | 2025 |  <a href="https://mit.9362006.xyz" target="_blank" rel="noopener"> Under MIT LICENSE</a>
+      <footer style="margin: 4rem 0; font-size: 0.875rem; text-align: center; line-height: 1.6;">
+        <a href="https://9362006.xyz" style="color: inherit; text-decoration: none;">© Zanix Qhove</a><br>
+  2025<br>
+        <a href="https://mit.9362006.xyz" target="_blank" rel="noopener" style="color: inherit; text-decoration: none;">MIT License</a>
       </footer>
 
     </div>
