--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 
       
       <footer style="margin: 4rem 0; font-size: 0.875rem; text-align: center; line-height: 1.6;">
-        <a href="https://9362006.xyz" style="color: inherit; text-decoration: none;">© Zanix Qhove</a><br>
+        <a href="https://9362006.xyz" style="color: #0af; text-decoration: underline;">© Zanix Qhove</a><br>
   2025<br>
-        <a href="https://mit.9362006.xyz" target="_blank" rel="noopener" style="color: inherit; text-decoration: none;">MIT License</a>
+        <a href="https://mit.9362006.xyz" target="_blank" rel="noopener" style="color: #0af; text-decoration: underline;">MIT License</a>
       </footer>
 
     </div>
