--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="keywords" content="Zanix Qhove, Creatives, and Everything I Want">
 
     <!-- Canonical URL - Helps prevent duplicate content issues -->
-    <meta rel="canonical" href="https://9362006.xyz">
+    <link rel="canonical" href="https://9362006.xyz">
 
     <!-- Author Information -->
     <meta name="author" content="Zanix Qhove">
