--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <a class="button button-bandcamp" href="https://zanix.bandcamp.com/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bandcamp.svg" alt="Bandcamp Logo">Bandcamp</a>
 
               <!-- Generic Email -->
-              <a class="button button-default" href="support@9362006.xyz" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Email Us</a>
+              <a class="button button-default" href="mailto:support@9362006.xyz" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Email Us</a>
 
               <!-- Generic Homepage -->
               <a class="button button-default" href="https://9362006.xyz" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-homepage.svg" alt="Homepage Icon">Visit Homepage</a>
