--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   - theme-dark: Forces dark theme
 -->
 
-<html class="theme-auto" lang="en"> <!-- Update`class="theme-auto" with your preference -->
+<html class="theme-dark" lang="en"> <!-- Update`class="theme-auto" with your preference -->
 
   <head>
     <meta charset="utf-8">
@@ -54,7 +54,7 @@
 
               Be sure to replace the src with your own image path and update the alt text
             -->
-            <img class="avatar avatar--rounded" src="images/avatar.png" srcset="images/avatar@2x.png 2x" alt="LittleLink">
+            <img class="avatar avatar--soft" src="images/avatar.png" srcset="images/avatar@2x.png 2x" alt="LittleLink">
 
             <!-- Replace with your name or brand -->
             <h1>
