--- a/index.html
+++ b/index.html
@@ -69,28 +69,28 @@
                 
 
               <!-- Dev.to -->
-              <a class="button button-dev-to" href="https://dev.to/qhove" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/dev-to.svg" alt="Dev.to Logo">Dev.to</a>
+              <a class="button button-dev-to" href="https://link.9362006.xyz/dev.to" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/dev-to.svg" alt="Dev.to Logo">Dev.to</a>
 
               <!-- GitHub -->
-              <a class="button button-github" href="https://github.com/qhove" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
+              <a class="button button-github" href="https://link.9362006.xyz/github" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
 
               <!-- GitLab -->
-              <a class="button button-gitlab" href="https://gitlab.com/qhove" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/gitlab.svg" alt="GitLab Logo">GitLab</a>
+              <a class="button button-gitlab" href="https://link.9362006.xyz/gitlab" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/gitlab.svg" alt="GitLab Logo">GitLab</a>
 
               <!-- SoundCloud -->
-              <a class="button button-soundcloud" href="https://on.soundcloud.com/1MBIktM0evcWuKXAOP" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/soundcloud.svg" alt="SoundCloud Logo">SoundCloud</a>
+              <a class="button button-soundcloud" href="https://link.9362006.xyz/soundcloud" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/soundcloud.svg" alt="SoundCloud Logo">SoundCloud</a>
 
               <!-- Spotify -->
-              <a class="button button-spotify" href="https://open.spotify.com/track/0ho4c8D5FzOOwenRBGNQvl?si=1wthfFoCQdKw2ytyE0Nb-g" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify.svg" alt="Spotify Logo">Listen on Spotify</a>
+              <a class="button button-spotify" href="https://link.9362006.xyz/spotify" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/spotify.svg" alt="Spotify Logo">Listen on Spotify</a>
 
               <!-- YouTube -->
-              <a class="button button-yt" href="https://youtube.com/@qhove?si=CAQVAPXKotkpduHp" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/youtube.svg" alt="YouTube Logo">YouTube</a>
+              <a class="button button-yt" href="https://link.9362006.xyz/youtube" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/youtube.svg" alt="YouTube Logo">YouTube</a>
 
               <!-- YouTube Music -->
-              <a class="button button-yt" href="https://music.youtube.com/channel/UCOWW-fBqySQnjV1xzdj4E-g?si=NsuOMqZ5f-7vipxy" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/youtube-music.svg" alt="YouTube Music Logo">Listen on YouTube Music</a>
+              <a class="button button-yt" href="https://link.9362006.xyz/youtubemusic" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/youtube-music.svg" alt="YouTube Music Logo">Listen on YouTube Music</a>
               
                             <!-- Bandcamp -->
-              <a class="button button-bandcamp" href="https://zanix.bandcamp.com/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bandcamp.svg" alt="Bandcamp Logo">Bandcamp</a>
+              <a class="button button-bandcamp" href="https://link.9362006.xyz/bandcamp" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bandcamp.svg" alt="Bandcamp Logo">Bandcamp</a>
 
               <!-- Generic Email -->
               <a class="button button-default" href="mailto:support@9362006.xyz" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Email Us</a>
@@ -99,7 +99,7 @@
               <a class="button button-default" href="https://9362006.xyz" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-homepage.svg" alt="Homepage Icon">Visit Homepage</a>
 
               <!-- Generic Website -->
-              <a class="button button-default" href="https://me.9362006.xyz" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-website.svg" alt="Website Icon">Visit Website</a>
+              <a class="button button-default" href="https://link.9362006.xyz/MyPages" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-website.svg" alt="Website Icon">Visit Website</a>
 
 
       </div>
@@ -108,7 +108,7 @@
       <footer style="margin: 4rem 0; font-size: 0.875rem; text-align: center; line-height: 1.6;">
         <a href="https://9362006.xyz" style="color: #0af; text-decoration: underline;">© Zanix Qhove</a><br>
   2025<br>
-        <a href="https://mit.9362006.xyz" target="_blank" rel="noopener" style="color: #0af; text-decoration: underline;">MIT License</a>
+        <a href="https://link.9362006.xyz/mit" target="_blank" rel="noopener" style="color: #0af; text-decoration: underline;">MIT License</a>
       </footer>
 
     </div>
