adding schema markup

--- a/index.html
+++ b/index.html
@@ -13,6 +13,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Person",
+  "name": "Zanix Qhove",
+  "url": "https://9362006.xyz",
+  "image": "https://i.imgur.com/vMUK3JA.png",
+  "sameAs": [
+    "https://github.com/qhove",
+    "https://9362006.xyz"
+  ],
+  "jobTitle": "Founder",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Zanix Qhove",
+    "url": "https://9362006.xyz"
+  }
+}
+    </script>
+
     <!-- Page Title - Change this to your name/brand (50-60 characters recommended) -->
     <title>ZQ-Link</title>
     <link rel="icon" type="image/x-icon" href="/images/avatar.png"> <!-- Update this with your own favicon -->
