--- a/index.html
+++ b/index.html
@@ -12,6 +12,116 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [{
+    "@type": "Question",
+    "name": "Why did I choose numeric domain?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "because i like it"
+    }
+  },{
+    "@type": "Question",
+    "name": "are you professional?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "No"
+    }
+  },{
+    "@type": "Question",
+    "name": "What is the purpose of this domain",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Learning"
+    }
+  },{
+    "@type": "Question",
+    "name": "Are you serious?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Yes, Of course"
+    }
+  }]
+}
+</script>
+    
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Zanix Qhove",
+  "alternateName": "quoverse",
+  "url": "https://9362006.xyz",
+  "logo": "https://i.imgur.com/vMUK3JA.png",
+  "sameAs": [
+    "https://github.com/qhove",
+    "https://9362006.xyz"
+  ]
+}
+</script>
+
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "url": "https://9362006.xyz",
+  "name": "Zanix Qhove",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://9362006.xyz/?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+    </script>
+
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "ItemList",
+  "itemListElement": [
+    {
+      "@type": "SiteNavigationElement",
+      "position": 1,
+      "name": "Zanix Qhove GitHub",
+      "url": "https://github.com/qhove"
+    },
+    {
+      "@type": "SiteNavigationElement",
+      "position": 2,
+      "name": "Zanix Qhove GitLab",
+      "url": "https://gitlab.com/qhove"
+    },
+    {
+      "@type": "SiteNavigationElement",
+      "position": 3,
+      "name": "Zanix Qhove YouTube",
+      "url": "https://youtube.com/@qhove"
+    },
+    {
+      "@type": "SiteNavigationElement",
+      "position": 4,
+      "name": "Zanix Qhove Spotify",
+      "url": "https://open.spotify.com/track/0ho4c8D5FzOOwenRBGNQvl?si=1wthfFoCQdKw2ytyE0Nb-g"
+    },
+    {
+      "@type": "SiteNavigationElement",
+      "position": 5,
+      "name": "Zanix Qhove BandCamp",
+      "url": "https://zanix.bandcamp.com/"
+    },
+    {
+      "@type": "SiteNavigationElement",
+      "position": 6,
+      "name": "Zanix Qhove dev.to",
+      "url": "https://dev.to/qhove"
+    }
+  ]
+}
+    </script>
 
     <script type="application/ld+json">
 {
