--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@
   }
 }
     </script>
+    
+    <!-- Clarity tracking code for https://9362006.xyz/ -->
+<script>
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "sn0yr60aw6");
+</script>
 
     <!-- Page Title - Change this to your name/brand (50-60 characters recommended) -->
     <title>ZQ-Link</title>
