--- a/index.html
+++ b/index.html
@@ -151,6 +151,13 @@
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "sn0yr60aw6");
 </script>
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "sn108qgeyt");
+</script>
 
     <!-- Page Title - Change this to your name/brand (50-60 characters recommended) -->
     <title>ZQ-Link</title>
