--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
     <!-- Page Title - Change this to your name/brand (50-60 characters recommended) -->
     <title>ZQ-Link</title>
     <link rel="icon" type="image/x-icon" href="/images/avatar.png"> <!-- Update this with your own favicon -->
+    <h1 style="position:absolute;left:-9999px;width:1px;height:1px;overflow:hidden;">
+    ZQ-Link - Collection of profile URLs
+    </h1>
 
     <!-- Meta Description - Write a description (150-160 characters recommended) -->
     <meta name="description" content="Zanix Qhove Social Link.">
