--- a/index.html
+++ b/index.html
@@ -262,6 +262,9 @@
 
     </div>
   </div>
+  <h1 style="position:absolute;left:-9999px;width:1px;height:1px;overflow:hidden;">
+    ZQ-Link - Collection of profile URLs
+  </h1>
 
 </body>
 
