--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
     ZQ-Link - Collection of profile URLs
     </h1>
 
+    <meta name="description" content="ZQ-Link: Collection of profile URLs and links for Zanix. link hub.">
+
     <!-- Meta Description - Write a description (150-160 characters recommended) -->
     <meta name="description" content="Zanix Qhove Social Link.">
 
