--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
               Be sure to replace the src with your own image path and update the alt text
             -->
-            <img class="avatar avatar--soft" src="images/avatar.png" srcset="images/avatar@2x.png 2x" alt="LittleLink">
+            <img class="avatar avatar--soft" src="images/avatar.png" srcset="images/avatar@2x.png 2x" alt="Zanix Qhove">
 
             <!-- Replace with your name or brand -->
             <h1>
