--- a/index.html
+++ b/index.html
@@ -211,6 +211,12 @@
               <!-- GitLab -->
               <a class="button button-gitlab" href="https://gitlab.com/qhove" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/gitlab.svg" alt="GitLab Logo">GitLab</a>
 
+                            <!-- WordPress -->
+              <a class="button button-wordpress" href="https://blog.9362006.xyz" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/wordpress.svg" alt="WordPress Logo">WordPress</a>
+              
+              <!-- Gravatar -->
+              <a class="button button-gravatar" href="https://qhove.bio" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons-extended/gravatar.svg" alt="Gravatar Logo">Gravatar</a>
+
               <!-- SoundCloud -->
               <a class="button button-soundcloud" href="https://on.soundcloud.com/1MBIktM0evcWuKXAOP" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/soundcloud.svg" alt="SoundCloud Logo">SoundCloud</a>
 
