--- a/index.html
+++ b/index.html
@@ -216,6 +216,9 @@
               
               <!-- Gravatar -->
               <a class="button button-gravatar" href="https://qhove.bio" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons-extended/gravatar.svg" alt="Gravatar Logo">Gravatar</a>
+              
+              <!-- Bluesky -->
+              <a class="button button-bluesky" href="https://bsky.app/profile/9362006.xyz" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="Bluesky Logo">Bluesky</a>
 
               <!-- SoundCloud -->
               <a class="button button-soundcloud" href="https://on.soundcloud.com/1MBIktM0evcWuKXAOP" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/soundcloud.svg" alt="SoundCloud Logo">SoundCloud</a>
@@ -235,6 +238,9 @@
               <!-- Xbox -->
               <a class="button button-xbox" href="https://www.xbox.com/id-ID/play/user/ZANIX936" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons-extended/xbox.svg" alt="Xbox Logo">Xbox</a>
 
+              <!-- TikTok -->
+              <a class="button button-tiktok" href="https://tiktok.com/@yingchienmei" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
+
               <!-- Generic Email -->
               <a class="button button-default" href="mailto:support@9362006.xyz" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Email Us</a>
 
@@ -244,6 +250,8 @@
               <!-- Generic Website -->
               <a class="button button-default" href="https://me.9362006.xyz" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-website.svg" alt="Website Icon">Visit Website</a>
 
+              <!-- PayPal -->
+              <a class="button button-paypal" href="https://paypal.me/qhove" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/paypal.svg" alt="PayPal Logo">PayPal</a>
 
       </div>
 
