--- a/index.html
+++ b/index.html
@@ -241,6 +241,12 @@
               <!-- TikTok -->
               <a class="button button-tiktok" href="https://tiktok.com/@yingchienmei" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
 
+                            <!-- Instagram -->
+              <a class="button button-instagram" href="https://www.instagram.com/zanix.qhove" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
+
+                            <!-- Threads -->
+              <a class="button button-threads" href="https://www.threads.com/@zanix.qhove" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/threads.svg" alt="Threads Logo">Threads</a>
+
               <!-- Generic Email -->
               <a class="button button-default" href="mailto:support@9362006.xyz" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-email.svg" alt="Email Icon">Email Us</a>
 
