--- a/index.html
+++ b/index.html
@@ -247,6 +247,9 @@
                             <!-- Threads -->
               <a class="button button-threads" href="https://www.threads.com/@zanix.qhove" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/threads.svg" alt="Threads Logo">Threads</a>
 
+              <!-- Blogspot -->
+              <a class="button button-blogspot" href="https://qhove.blogspot.com" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/109559.jpg" alt="Blogspot icon">Blogspot</a>
+
               <!-- Generic Homepage -->
               <a class="button button-default" href="https://9362006.xyz" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-homepage.svg" alt="Homepage Icon">Visit Homepage</a>
 
