--- a/index.html
+++ b/index.html
@@ -200,8 +200,10 @@
 
             <!-- All your buttons go here -->
             <div class="button-stack" role="navigation">
-                
 
+              <!-- DOMAIN -->
+              <a class="button button-ngl" href="https://domain.9362006.xyz" target="_blank" rel="noopener"><img class="icon" aria-hidden="true" src="images/icons-extended/ngl.svg" alt="NGL Logo">My Domain</a>
+              
               <!-- Dev.to -->
               <a class="button button-dev-to" href="https://dev.to/qhove" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/dev-to.svg" alt="Dev.to Logo">Dev.to</a>
 
