--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               <a class="button button-ngl" href="https://domain.9362006.xyz" target="_blank" rel="noopener"><img class="icon" aria-hidden="true" src="images/icons-extended/ngl.svg" alt="NGL Logo">My Domain</a>
 
               <!-- DONATE -->
-              <a class="button button-ngl" href="https://domain.9362006.xyz" target="_blank" rel="noopener"><img class="icon" aria-hidden="true" src="images/icons/donate.png" alt="donate Logo">DONATE</a>
+              <a class="button button-ngl" href="https://donate.9362006.xyz" target="_blank" rel="noopener"><img class="icon" aria-hidden="true" src="images/icons/donate.png" alt="donate Logo">DONATE</a>
               
               
               <!-- Dev.to -->
