--- a/index.html
+++ b/index.html
@@ -129,16 +129,9 @@
             <h1>
               <div>Zanix Qhove</div>
             </h1>
-            <p>Zanix Qhove, Do Everything What I Want.</p>
+            <p>Zanix Qhove, I do everything i want.</p>
 
             <div class="button-stack" role="navigation">
-
-              <!-- DOMAIN -->
-              <a class="button button-ngl" href="https://domain.9362006.xyz" target="_blank" rel="noopener"><img class="icon" aria-hidden="true" src="images/icons-extended/ngl.svg" alt="NGL Logo">My Domain</a>
-
-              <!-- DONATE -->
-              <a class="button button-ngl" href="https://donate.9362006.xyz" target="_blank" rel="noopener"><img class="icon" aria-hidden="true" src="images/icons/donate.png" alt="donate Logo">DONATE</a>
-              
 
               <!-- GitHub -->
               <a class="button button-github" href="https://github.com/qhove" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
@@ -150,16 +143,13 @@
               <a class="button button-bluesky" href="https://bsky.app/profile/9362006.xyz" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="Bluesky Logo">Bluesky</a>
 
               <!-- Xbox -->
-              <a class="button button-xbox" href="https://www.xbox.com/id-ID/play/user/ZANIX936" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons-extended/xbox.svg" alt="Xbox Logo">Xbox</a>
+              <a class="button button-xbox" href="https://www.xbox.com/id-ID/play/user/Qhove" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons-extended/xbox.svg" alt="Xbox Logo">Xbox</a>
 
               <!-- TikTok -->
               <a class="button button-tiktok" href="https://tiktok.com/@yingchienmei" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
 
                             <!-- Instagram -->
               <a class="button button-instagram" href="https://www.instagram.com/zanix.qhove" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
-
-              <!-- Blogspot -->
-              <a class="button button-soundcloud" href="https://qhove.blogspot.com" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/109559.jpg" alt="Blogspot icon">Blogspot</a>
 
               <!-- PayPal -->
               <a class="button button-paypal" href="https://paypal.me/qhove" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/paypal.svg" alt="PayPal Logo">PayPal</a>
