--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <h1>
               <div>Zanix Qhove</div>
             </h1>
-            <p>Zanix Qhove, I do everything i want.</p>
+            <p>I do everything i want.</p>
 
             <div class="button-stack" role="navigation">
 
